--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@types/jest": "^24.0.13",
     "jest": "^24.8.0",
     "rimraf": "^2.6.3",
+    "rollup": "^1.15.3",
+    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-typescript2": "^0.21.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
