--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prepublish": "npm run lint && npm run test && npm run build",
-    "build": "rimraf dist && tsc -p tsconfig.json",
+    "build": "rimraf dist && rollup -c",
     "lint": "tslint --project ./",
     "test": "jest"
   },
@@ -40,5 +40,6 @@
     "ts-jest": "^24.0.2",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
-  }
+  },
+  "dependencies": {}
 }
